--- a/pyproject.toml
+++ b/pyproject.toml
@@ -9,6 +9,8 @@ python = "^3.7"
 flask = "^1.1"
 pillow = "^6.1"
 funcy = "^1.12"
+gunicorn = { version = "^19.9", extras = ["gevent"] }
+environs = "^5.1"
 
 [tool.poetry.dev-dependencies]
 pytest = "^3.0"
