--- a/pyproject.toml
+++ b/pyproject.toml
@@ -11,6 +11,7 @@ pillow = "^6.1"
 funcy = "^1.12"
 gunicorn = { version = "^19.9", extras = ["gevent"] }
 environs = "^5.1"
+flask-redis = "^0.4.0"
 
 [tool.poetry.dev-dependencies]
 pytest = "^3.0"
