--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,6 +1,6 @@
 [tool.poetry]
 name = "dummy-flask"
-version = "0.1.0"
+version = "0.1.1"
 description = ""
 authors = ["Michael Van Wickle <mvanwickle@gmail.com>"]
 
@@ -15,6 +15,7 @@ flask-redis = "^0.4.0"
 
 [tool.poetry.dev-dependencies]
 pytest = "^3.0"
+isort = "^4.3"
 
 [build-system]
 requires = ["poetry>=0.12"]
