--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,6 +1,6 @@
 [tool.poetry]
 name = "dummy-flask"
-version = "0.1.1"
+version = "0.1.2"
 description = ""
 authors = ["Michael Van Wickle <mvanwickle@gmail.com>"]
 
@@ -16,6 +16,21 @@ flask-redis = "^0.4.0"
 [tool.poetry.dev-dependencies]
 pytest = "^3.0"
 isort = "^4.3"
+toml = "^0.10.0"
+
+[tool.isort]
+known_first_parts=["config"]
+no_lines_before="LOCALFOLDER"
+multi_line_output=3
+include_trailing_comma=true
+force_grid_wrap=0
+use_parentheses=true
+
+[tool.black]
+line-length = 79
+skip-numeric-underscore-normalization = true
+target-version = ["py37"]
+
 
 [build-system]
 requires = ["poetry>=0.12"]
