--- a/pyproject.toml
+++ b/pyproject.toml
@@ -7,14 +7,14 @@ authors = ["Michael Van Wickle <mvanwickle@gmail.com>"]
 [tool.poetry.dependencies]
 python = "^3.7"
 flask = "^1.1"
-pillow = "^6.1"
 funcy = "^1.12"
 gunicorn = { version = "^19.9", extras = ["gevent"] }
 environs = "^5.1"
 flask-redis = "^0.4.0"
+Pillow = "^6.1.0"
 
 [tool.poetry.dev-dependencies]
-pytest = "^3.0"
+pytest = "^5.0"
 isort = "^4.3"
 toml = "^0.10.0"
 
