--- a/package.json
+++ b/package.json
@@ -6,6 +6,10 @@
   "repository": "https://github.com/mvwicky/dummy-flask.git",
   "author": "Michael Van Wickle <mvanwickle@gmail.com>",
   "license": "MIT",
+  "engines": {
+    "node": ">=10",
+    "yarn": "1.x"
+  },
   "devDependencies": {
     "@babel/core": "^7.0.0-0",
     "@babel/preset-env": "^7.5.5",
