--- a/package.json
+++ b/package.json
@@ -14,14 +14,21 @@
     "@babel/core": "^7.0.0-0",
     "@babel/preset-env": "^7.5.5",
     "@babel/preset-react": "^7.0.0",
+    "@types/feather-icons": "^4.7.0",
     "cross-env": "^5.2.0",
+    "eslint": "^6.1.0",
+    "eslint-config-prettier": "^6.0.0",
+    "eslint-plugin-prettier": "^3.1.0",
     "node-sass": "^4.12.0",
-    "parcel-bundler": "^1.12.3"
+    "parcel-bundler": "^1.12.3",
+    "prettier": "^1.18.2"
   },
   "scripts": {
     "build": "./build.sh"
   },
   "dependencies": {
-    "clipboard": "^2.0.4"
+    "clipboard": "^2.0.4",
+    "feather-icons": "^4.24.0",
+    "sanitize.css": "^11.0.0"
   }
 }
