--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,3 +1,16 @@
 {
-    "python.pythonPath": "/Users/michael/.pyenv/versions/dummy-flask-3.7.3/bin/python"
+  "python.pythonPath": "/Users/michael/.pyenv/versions/dummy-flask-3.7.3/bin/python",
+  "files.exclude": {
+    "**/.git": true,
+    "**/.svn": true,
+    "**/.hg": true,
+    "**/CVS": true,
+    "**/.DS_Store": true,
+    "**/__pycache__": true,
+    "node_modules": true,
+    "**/dist": true,
+    "dummy_flask/api/images": true,
+    ".cache": true,
+    "*.sublime*": true
+  }
 }
