--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,4 @@
-cffi==1.13.0; sys_platform == "win32" and platform_python_implementation == "CPython" and extra == "gevent" \
+cffi==1.13.0; sys_platform == "win32" and platform_python_implementation == "CPython" \
     --hash=sha256:f56dff1bd81022f1c980754ec721fb8da56192b026f17f0f99b965da5ab4fbd2 \
     --hash=sha256:fe5d65a3ee38122003245a82303d11ac05ff36531a8f5ce4bc7d4bbc012797e1 \
     --hash=sha256:1112d2fc92a867a6103bce6740a549e74b1d320cf28875609f6e93857eee4f2d \
@@ -40,7 +40,7 @@ flask-redis==0.4.0 \
 funcy==1.13 \
     --hash=sha256:141950038e72bdc2d56fa82468586a1d1291b9cc9346daaaa322dffed1d1da6e \
     --hash=sha256:918f333f675d9841ec7d77b9f0d5a272ed290393a33c8ef20e605847de89b1c3
-gevent==1.4.0; extra == "gevent" \
+gevent==1.4.0; \
     --hash=sha256:1b7d3a285978b27b469c0ff5fb5a72bcd69f4306dbbf22d7997d83209a8ba917 \
     --hash=sha256:44089ed06a962a3a70e96353c981d628b2d4a2f2a75ea5d90f916a62d22af2e8 \
     --hash=sha256:0e1e5b73a445fe82d40907322e1e0eec6a6745ca3cea19291c6f9f50117bb7ea \
@@ -64,7 +64,7 @@ gevent==1.4.0; extra == "gevent" \
     --hash=sha256:107f4232db2172f7e8429ed7779c10f2ed16616d75ffbe77e0e0c3fcdeb51a51 \
     --hash=sha256:28a0c5417b464562ab9842dd1fb0cc1524e60494641d973206ec24d6ec5f6909 \
     --hash=sha256:1eb7fa3b9bd9174dfe9c3b59b7a09b768ecd496debfc4976a9530a3e15c990d1
-greenlet==0.4.15; extra == "gevent" and platform_python_implementation == "CPython" \
+greenlet==0.4.15; platform_python_implementation == "CPython" \
     --hash=sha256:99a26afdb82ea83a265137a398f570402aa1f2b5dfb4ac3300c026931817b163 \
     --hash=sha256:beeabe25c3b704f7d56b573f7d2ff88fc99f0138e43480cecdfcaa3b87fe4f87 \
     --hash=sha256:9854f612e1b59ec66804931df5add3b2d5ef0067748ea29dc60f0efdcda9a638 \
@@ -152,7 +152,7 @@ pillow==6.2.0 \
     --hash=sha256:08abf39948d4b5017a137be58f1a52b7101700431f0777bec3d897c3949f74e6 \
     --hash=sha256:5090857876c58885cfa388dc649e5db30aae98a068c26f3fd0ac9d7d9a4d9572 \
     --hash=sha256:4548236844327a718ce3bb182ab32a16fa2050c61e334e959f554cac052fb0df
-pycparser==2.19; sys_platform == "win32" and platform_python_implementation == "CPython" and extra == "gevent" \
+pycparser==2.19; sys_platform == "win32" and platform_python_implementation == "CPython" \
     --hash=sha256:a988718abfad80b6b157acce7bf130a30876d27603738ac39f140993246b25b3
 python-dotenv==0.10.3 \
     --hash=sha256:f157d71d5fec9d4bd5f51c82746b6344dffa680ee85217c123f4a0c8117c4544 \
