--- a/pyproject.toml
+++ b/pyproject.toml
@@ -12,6 +12,7 @@ gunicorn = { version = "^19.9", extras = ["gevent"] }
 environs = "^6.0"
 flask-redis = "^0.4.0"
 Pillow = "^6.1.0"
+flask-cors = "^3.0.8"
 
 [tool.poetry.dev-dependencies]
 pytest = "^5.0"
