--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,26 +1,31 @@
 [tool.poetry]
 name = "dummy-flask"
-version = "0.2.0"
+version = "0.3.1"
 description = ""
 authors = ["Michael Van Wickle <mvanwickle@gmail.com>"]
 
 [tool.poetry.dependencies]
 python = "^3.7"
-flask = "^1.1"
-funcy = "^1.12"
-gunicorn = { version = "^19.9", extras = ["gevent"] }
+attrs = "^19.3.0"
 environs = "^6.0"
-flask-redis = "^0.4.0"
-Pillow = "^6.1.0"
+flask = "^1.1"
 flask-cors = "^3.0.8"
+flask-redis = "^0.4.0"
+funcy = "^1.12"
+gunicorn = { version = "^20.0", extras = ["gevent"] }
+humanize = "^0.5.1"
+Pillow = "^6.1.0"
 
 [tool.poetry.dev-dependencies]
-pytest = "^5.0"
 isort = "^4.3"
+pytest = "^5.0"
+pytest-cov = "^2.8.1"
+pytest-html = "^2.0.0"
+pytest-selenium = "^1.17.0"
 toml = "^0.10.0"
 
 [tool.isort]
-known_first_parts=["config"]
+known_first_party=["config", "dummy_flask"]
 no_lines_before="LOCALFOLDER"
 multi_line_output=3
 include_trailing_comma=true
@@ -28,7 +33,7 @@ force_grid_wrap=0
 use_parentheses=true
 
 [tool.black]
-line-length = 79
+line-length = 88
 skip-numeric-underscore-normalization = true
 target-version = ["py37"]
 
