--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,5 +1,7 @@
 {
-  "python.pythonPath": "/Users/michael/.pyenv/versions/dummy-flask-3.7.5/bin/python",
+  "python.pythonPath": "${env:HOME}/.pyenv/versions/dummy-flask-3.7.5/bin/python",
+  "python.linting.flake8Args": ["--config=${workspaceFolder}/.flake8"],
+  "python.sortImports.path": "${env:HOME}/.pyenv/versions/dummy-flask-3.7.5/bin/isort",
   "files.exclude": {
     "**/.git": true,
     "**/.svn": true,
@@ -13,5 +15,10 @@
     ".cache": true,
     "*.sublime*": true,
     "*.egg-info": true
-  }
+  },
+  "python.testing.pytestPath": "${env:HOME}/.pyenv/versions/dummy-flask-3.7.5/bin/pytest",
+  "python.testing.pytestArgs": ["tests"],
+  "python.testing.unittestEnabled": false,
+  "python.testing.nosetestsEnabled": false,
+  "python.testing.pytestEnabled": true
 }
