--- a/package.json
+++ b/package.json
@@ -26,7 +26,7 @@
     "typescript": "^3.6.3"
   },
   "scripts": {
-    "build": "./build.sh"
+    "build": "make prod"
   },
   "dependencies": {
     "balloon-css": "^1.0.3",
