--- a/pyproject.toml
+++ b/pyproject.toml
@@ -23,6 +23,11 @@ pytest = "^5.0"
 pytest-cov = "^2.8.1"
 pytest-html = "^2.0.0"
 pytest-selenium = "^1.17.0"
+psutil = "^5.6.5"
+bjoern = "^3.1.0"
+
+[tool.poetry.scripts]
+serve = "bin.serve:main"
 
 [tool.isort]
 known_first_party=["config", "dummy_flask"]
