--- a/pyproject.toml
+++ b/pyproject.toml
@@ -16,6 +16,11 @@ gunicorn = { version = "^20.0", extras = ["gevent"] }
 humanize = "^0.5.1"
 Pillow = "^7.0.0"
 toml = "^0.10.0"
+fastapi = "^0.45.0"
+ujson = "^1.35"
+pyyaml = "^5.2"
+aiofiles = "^0.4.0"
+jinja2 = "^2.10.3"
 
 [tool.poetry.dev-dependencies]
 isort = "^4.3"
