--- a/pyproject.toml
+++ b/pyproject.toml
@@ -21,6 +21,8 @@ ujson = "^1.35"
 pyyaml = "^5.2"
 aiofiles = "^0.4.0"
 jinja2 = "^2.10.3"
+uvicorn = "^0.11.1"
+aioredis = "^1.3.1"
 
 [tool.poetry.dev-dependencies]
 isort = "^4.3"
