--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,6 +1,6 @@
 [tool.poetry]
 name = "dummy-flask"
-version = "0.6.0"
+version = "0.7.0"
 description = ""
 authors = ["Michael Van Wickle <mvanwickle@gmail.com>"]
 
@@ -16,6 +16,8 @@ gunicorn = { version = "^20.0", extras = ["gevent"] }
 humanize = "^0.5.1"
 Pillow = "^7.0.0"
 toml = "^0.10.0"
+bs4 = "^0.0.1"
+lxml = "^4.4.2"
 
 [tool.poetry.dev-dependencies]
 isort = "^4.3"
@@ -24,7 +26,6 @@ pytest-cov = "^2.8.1"
 pytest-html = "^2.0.0"
 pytest-selenium = "^1.17.0"
 psutil = "^5.6.5"
-bjoern = "^3.1.0"
 
 [tool.poetry.scripts]
 serve = "bin.serve:main"
