--- a/pyproject.toml
+++ b/pyproject.toml
@@ -37,11 +37,12 @@ multi_line_output=3
 include_trailing_comma=true
 force_grid_wrap=0
 use_parentheses=true
+line_length=88
 
 [tool.black]
 line-length = 88
 skip-numeric-underscore-normalization = true
-target-version = ["py37"]
+target-version = ["py38"]
 
 
 [build-system]
