--- a/pytest.ini
+++ b/pytest.ini
@@ -5,7 +5,7 @@ addopts =
     -x
     --showlocals
     --durations 5
-    --cov dummy_flask
+    --cov holdmypics
     --cov-report html
     --html pytest-report/report.html
     --self-contained-html
@@ -14,7 +14,7 @@ addopts =
 filterwarnings =
     ignore::PendingDeprecationWarning
     ignore::DeprecationWarning
-cache_dir=${XDG_CACHE_HOME}/pytest/dummy_flask
+cache_dir=${XDG_CACHE_HOME}/pytest/holdmypics
 markers =
     slow
     run_tasks
