--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -11,7 +11,7 @@
     "**/__pycache__": true,
     "node_modules": true,
     "./dist/": true,
-    "dummy_flask/api/images": true,
+    "holdmypics/api/images": true,
     ".cache": true,
     "*.sublime*": true,
     "*.egg-info": true,
