--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,5 +1,5 @@
 [tool.poetry]
-name = "dummy-flask"
+name = "holdmypics"
 version = "0.7.0"
 description = ""
 authors = ["Michael Van Wickle <mvanwickle@gmail.com>"]
@@ -31,7 +31,7 @@ psutil = "^5.6.5"
 serve = "bin.serve:main"
 
 [tool.isort]
-known_first_party=["config", "dummy_flask"]
+known_first_party=["config", "holdmypics"]
 no_lines_before="LOCALFOLDER"
 multi_line_output=3
 include_trailing_comma=true
