fix dumb copy button

--- a/.browserslistrc
+++ b/.browserslistrc
@@ -1,2 +1,8 @@
-> 0.2%
-last 1 version
+> 0.5%
+last 2 versions
+not dead
+Firefox ESR
+# last 2 Chrome major versions
+# last 2 Safari major versions
+# last 2 iOS major versions
+# last 2 Firefox major versions
