--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "@types/webpack": "^4.41.2",
     "autoprefixer": "^9.7.4",
     "babel-loader": "^8.0.6",
+    "bourbon": "^6.0.0",
     "clean-webpack-plugin": "^3.0.0",
     "clipboard": "^2.0.4",
     "core-js": "^3.6.4",
@@ -41,6 +42,7 @@
     "eslint-config-prettier": "^6.0.0",
     "eslint-plugin-prettier": "^3.1.0",
     "feather-icons": "^4.24.0",
+    "file-loader": "^5.0.2",
     "html-webpack-plugin": "^4.0.0-beta.11",
     "mini-css-extract-plugin": "^0.9.0",
     "optimize-css-assets-webpack-plugin": "^5.0.3",
