--- a/pyproject.toml
+++ b/pyproject.toml
@@ -11,6 +11,7 @@ environs = "^7.0"
 flask = "^1.1"
 flask-cors = "^3.0.8"
 flask-redis = "^0.4.0"
+redis = { version = "^3.0,!=3.4.0" }
 funcy = "^1.12"
 gunicorn = { version = "^20.0", extras = ["gevent"] }
 humanize = "^0.5.1"
