--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "@babel/preset-env": "^7.8.3",
     "@babel/preset-typescript": "^7.8.3",
     "@babel/runtime": "^7.8.4",
+    "@cypress/webpack-preprocessor": "^4.1.1",
     "@types/clipboard": "^2.0.1",
     "@types/debug": "^4.1.5",
     "@types/feather-icons": "^4.7.0",
@@ -37,6 +38,7 @@
     "core-js": "^3.6.4",
     "cross-env": "^6.0.0",
     "css-loader": "^3.4.2",
+    "cypress": "^3.8.3",
     "debug": "^4.1.1",
     "eslint": "^6.1.0",
     "eslint-config-prettier": "^6.0.0",
@@ -55,6 +57,7 @@
     "style-loader": "^1.1.3",
     "terser-webpack-plugin": "^2.3.2",
     "tippy.js": "^5.2.0",
+    "ts-loader": "^6.2.1",
     "ts-node": "^8.6.2",
     "typescript": "^3.6.3",
     "webpack": "^4.41.5",
