--- a/pyproject.toml
+++ b/pyproject.toml
@@ -27,6 +27,7 @@ pytest-cov = "^2.8.1"
 pytest-html = "^2.0.0"
 pytest-selenium = "^1.17.0"
 psutil = "^5.6.5"
+ptpython = "^3.0.0"
 
 [tool.poetry.scripts]
 serve = "bin.serve:main"
