--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "holdmypics",
-  "version": "0.9.0",
+  "version": "0.9.1",
   "description": "Placeholder image generator",
   "repository": "https://github.com/mvwicky/holdmypics.git",
   "license": "MIT",
@@ -22,6 +22,8 @@
     "@babel/preset-typescript": "^7.8.3",
     "@babel/runtime": "^7.8.4",
     "@cypress/webpack-preprocessor": "^4.1.1",
+    "@popperjs/core": "^2.0.6",
+    "@types/autoprefixer": "^9.7.1",
     "@types/clipboard": "^2.0.1",
     "@types/debug": "^4.1.5",
     "@types/feather-icons": "^4.7.0",
@@ -36,13 +38,14 @@
     "clean-webpack-plugin": "^3.0.0",
     "clipboard": "^2.0.4",
     "core-js": "^3.6.4",
-    "cross-env": "^6.0.0",
+    "cross-env": "^7.0.2",
     "css-loader": "^3.4.2",
-    "cypress": "^3.8.3",
+    "cypress": "^4.1.0",
     "debug": "^4.1.1",
     "eslint": "^6.1.0",
     "eslint-config-prettier": "^6.0.0",
     "eslint-plugin-prettier": "^3.1.0",
+    "extract-css-chunks-webpack-plugin": "^4.7.4",
     "feather-icons": "^4.24.0",
     "file-loader": "^5.0.2",
     "html-loader": "^0.5.5",
@@ -56,8 +59,9 @@
     "sass-loader": "^8.0.2",
     "sass-mq": "^5.0.1",
     "style-loader": "^1.1.3",
+    "tailwindcss": "^1.2.0",
     "terser-webpack-plugin": "^2.3.2",
-    "tippy.js": "^5.2.0",
+    "tippy.js": "^6.0.0",
     "ts-loader": "^6.2.1",
     "ts-node": "^8.6.2",
     "typescript": "^3.6.3",
