--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,33 +1,35 @@
 [tool.poetry]
 name = "holdmypics"
-version = "0.9.0"
+version = "0.9.1"
 description = ""
 authors = ["Michael Van Wickle <mvanwickle@gmail.com>"]
 
 [tool.poetry.dependencies]
 python = "^3.7"
 attrs = "^19.3.0"
+bs4 = "^0.0.1"
 environs = "^7.0"
 flask = "^1.1"
 flask-cors = "^3.0.8"
 flask-redis = "^0.4.0"
-redis = { version = "^3.0,!=3.4.0" }
 funcy = "^1.12"
 gunicorn = { version = "^20.0", extras = ["gevent"] }
-humanize = "^0.5.1"
-Pillow = "^7.0.0"
-toml = "^0.10.0"
-bs4 = "^0.0.1"
+humanize = "^2.0.0"
 lxml = "^4.4.2"
+Pillow = "^7.0.0"
+redis = { version = "^3.0" }
+structlog = "^20.1.0"
+toml = "^0.10.0"
 
 [tool.poetry.dev-dependencies]
+colorama = "^0.4.3"
 isort = "^4.3"
+psutil = "^5.6.5"
+ptpython = "^3.0.0"
 pytest = "^5.0"
 pytest-cov = "^2.8.1"
 pytest-html = "^2.0.0"
 pytest-selenium = "^1.17.0"
-psutil = "^5.6.5"
-ptpython = "^3.0.0"
 
 [tool.poetry.scripts]
 serve = "bin.serve:main"
