new logging, validate colors

--- a/.dockerignore
+++ b/.dockerignore
@@ -1,26 +1,40 @@
+*.egg-info
+*.sublime-*
+**/__pycache__
+**/.cache
 **/.classpath
+**/.cov
 **/.dockerignore
 **/.env
 **/.git
 **/.gitignore
+**/.log
+**/.mypy_cache
 **/.project
+**/.pytest_cache
 **/.settings
 **/.toolstarget
 **/.vs
 **/.vscode
 **/*.*proj.user
+**/*.anaconda
 **/*.dbmdl
+**/*.DS_Store
+**/*.envrc
+**/*.eslintrc.yml
+**/*.flake8
 **/*.jfm
+**/*.md
 **/azds.yaml
 **/bin
 **/charts
+**/dist
 **/docker-compose*
 **/Dockerfile*
+**/log
 **/node_modules
 **/npm-debug.log
 **/obj
 **/secrets.dev.yaml
 **/values.dev.yaml
-README.md
-**/.log
-**/dist
+pytest-report
