--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,17 +1,20 @@
+---
 version: "3.7"
 services:
   holdmypics:
-    image: holdmypics
+    build:
+      context: .
+      dockerfile: config/prod/Dockerfile
+    image: holdmypics-prod
     env_file: .compose.env
-    build: .
     ports:
       - "4000:80"
     networks:
-      - web
+      - webnet
     depends_on:
       - redis
   redis:
-    image: redis:5.0
+    image: redis:5.0-alpine
     ports:
       - "6379:6379"
     deploy:
@@ -19,4 +22,6 @@ services:
         constraints: [node.role == manager]
     command: redis-server --appendonly yes
     networks:
-      - web
+      - webnet
+networks:
+  webnet:
