--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,6 +1,6 @@
 [tool.poetry]
 name = "holdmypics"
-version = "0.11.0"
+version = "0.11.4"
 description = ""
 authors = ["Michael Van Wickle <mvanwickle@gmail.com>"]
 
@@ -13,14 +13,15 @@ flask = "^1.1"
 flask-cors = "^3.0.8"
 flask-redis = "^0.4.0"
 funcy = "^1.12"
-gunicorn = { version = "^20.0", extras = ["gevent"] }
+gunicorn = { version = "^20.0" }
 humanize = "^2.0.0"
+loguru = "^0.4.1"
 lxml = "^4.4.2"
 Pillow = "^7.0.0"
 redis = { version = "^3.0" }
 structlog = "^20.1.0"
 toml = "^0.10.0"
-loguru = "^0.4.1"
+tomlkit = "^0.5.11"
 
 [tool.poetry.dev-dependencies]
 colorama = "^0.4.3"
@@ -31,6 +32,7 @@ pytest = "^5.0"
 pytest-cov = "^2.8.1"
 pytest-html = "^2.0.0"
 pytest-selenium = "^1.17.0"
+semver = "^2.9.1"
 
 [tool.poetry.scripts]
 serve = "bin.serve:main"
@@ -49,6 +51,26 @@ line-length = 88
 skip-numeric-underscore-normalization = true
 target-version = ["py38"]
 
+[tool.coverage.run]
+branch = true
+data_file = ".cov/.coverage"
+
+[tool.coverage.report]
+precision = 2
+skip_empty = true
+exclude_lines = [
+    "pragma: no cover",
+    "def __repr__",
+    "if settings.DEBUG",
+    "if TYPE_CHECKING",
+    "raise NotImplementedError",
+    "if __name__ == .__main__.:"
+]
+
+[tool.coverage.html]
+title = "Coverage Report"
+directory = ".cov/htmlcov"
+show_contexts = true
 
 [build-system]
 requires = ["poetry>=0.12"]
