--- a/pyproject.toml
+++ b/pyproject.toml
@@ -7,7 +7,7 @@ authors = ["Michael Van Wickle <mvanwickle@gmail.com>"]
 [tool.poetry.dependencies]
 python = "^3.7"
 attrs = "^19.3.0"
-bs4 = "^0.0.1"
+beautifulsoup4 = { version = "^4.3", extras = ["lxml"] }
 environs = "^7.0"
 flask = "^1.1"
 flask-cors = "^3.0.8"
@@ -16,12 +16,7 @@ funcy = "^1.12"
 gunicorn = { version = "^20.0" }
 humanize = "^2.0.0"
 loguru = "^0.4.1"
-lxml = "^4.4.2"
 Pillow = "^7.0.0"
-redis = { version = "^3.0" }
-structlog = "^20.1.0"
-toml = "^0.10.0"
-tomlkit = "^0.5.11"
 
 [tool.poetry.dev-dependencies]
 colorama = "^0.4.3"
@@ -33,6 +28,8 @@ pytest-cov = "^2.8.1"
 pytest-html = "^2.0.0"
 pytest-selenium = "^1.17.0"
 semver = "^2.9.1"
+toml = "^0.10.0"
+tomlkit = "^0.5.11"
 
 [tool.poetry.scripts]
 serve = "bin.serve:main"
@@ -61,7 +58,6 @@ skip_empty = true
 exclude_lines = [
     "pragma: no cover",
     "def __repr__",
-    "if settings.DEBUG",
     "if TYPE_CHECKING",
     "raise NotImplementedError",
     "if __name__ == .__main__.:"
@@ -70,7 +66,6 @@ exclude_lines = [
 [tool.coverage.html]
 title = "Coverage Report"
 directory = ".cov/htmlcov"
-show_contexts = true
 
 [build-system]
 requires = ["poetry>=0.12"]
