--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,6 +1,6 @@
 [tool.poetry]
 name = "holdmypics"
-version = "0.12.2"
+version = "0.13.0"
 description = ""
 authors = ["Michael Van Wickle <mvanwickle@gmail.com>"]
 
@@ -18,7 +18,8 @@ humanize = "^2.0.0"
 loguru = "^0.4.1"
 Pillow = "^7.0.0"
 semver = "^2.9.1"
-tomlkit = "^0.5.11"
+tomlkit = "^0.6.0"
+whitenoise = { version = "^5.0.1", extras = ["brotli"] }
 
 [tool.poetry.dev-dependencies]
 colorama = "^0.4.3"
@@ -32,16 +33,15 @@ pytest-selenium = "^1.17.0"
 toml = "^0.10.0"
 
 [tool.poetry.scripts]
-serve = "bin.serve:main"
 
 [tool.isort]
-known_first_party=["config", "holdmypics"]
-no_lines_before="LOCALFOLDER"
-multi_line_output=3
-include_trailing_comma=true
-force_grid_wrap=0
-use_parentheses=true
-line_length=88
+known_first_party = ["config", "holdmypics"]
+no_lines_before = "LOCALFOLDER"
+multi_line_output = 3
+include_trailing_comma = true
+force_grid_wrap = 0
+use_parentheses = true
+line_length = 88
 
 [tool.black]
 line-length = 88
