--- a/.dockerignore
+++ b/.dockerignore
@@ -1,7 +1,7 @@
-*.egg-info
-*.sublime-*
 **/__pycache__
+**/.*.env
 **/.cache
+**/.circleci
 **/.classpath
 **/.cov
 **/.dockerignore
@@ -12,7 +12,9 @@
 **/.mypy_cache
 **/.project
 **/.pytest_cache
+**/.python-version
 **/.settings
+**/.slugignore
 **/.toolstarget
 **/.vs
 **/.vscode
@@ -20,21 +22,26 @@
 **/*.anaconda
 **/*.dbmdl
 **/*.DS_Store
+**/*.egg-info
 **/*.envrc
 **/*.eslintrc.yml
 **/*.flake8
 **/*.jfm
 **/*.md
+**/*.sublime-*
 **/azds.yaml
 **/bin
 **/charts
 **/dist
 **/docker-compose*
 **/Dockerfile*
+**/heroku.yml
 **/log
 **/node_modules
 **/npm-debug.log
 **/obj
+**/pytest-report
 **/secrets.dev.yaml
 **/values.dev.yaml
-pytest-report
+LICENSE
+config
