--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -27,5 +27,15 @@
   "editor.tabSize": 2,
   "[python]": {
     "editor.tabSize": 4
+  },
+  "search.exclude": {
+    "**/node_modules": true,
+    "**/bower_components": true,
+    "**/*.code-search": true,
+    "**/*.eot": true,
+    "**/*.ttf": true,
+    "**/*.woff": true,
+    "**/*.woff2": true,
+    "**/fonts/*.svg": true
   }
 }
