--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "holdmypics",
-  "version": "0.13.2",
+  "version": "0.13.3",
   "description": "Placeholder image generator",
   "repository": "https://github.com/mvwicky/holdmypics.git",
   "license": "MIT",
@@ -13,7 +13,8 @@
     "watch": "yarn run build:dev --watch"
   },
   "dependencies": {
-    "friendly-words": "^1.1.10"
+    "friendly-words": "^1.1.10",
+    "rfs": "^9.0.3"
   },
   "devDependencies": {
     "@babel/core": "^7.0.0-0",
