Add stylelint, fix vendored scss (sort of)

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -38,5 +38,10 @@
     "**/*.woff2": true,
     "**/fonts/*.svg": true
   },
-  "css.validate": false
+  "css.validate": false,
+  "[scss]": {
+    "editor.codeActionsOnSave": {
+      "source.fixAll.stylelint": true
+    }
+  }
 }
