--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "@types/optimize-css-assets-webpack-plugin": "^5.0.1",
     "@types/terser-webpack-plugin": "^2.2.0",
     "@types/webpack": "^4.41.2",
+    "@types/workbox-webpack-plugin": "^5.1.0",
     "autoprefixer": "^9.7.4",
     "babel-loader": "^8.0.6",
     "bourbon": "^7.0.0",
@@ -55,6 +56,7 @@
     "html-webpack-plugin": "^4.0.0-beta.11",
     "mini-css-extract-plugin": "^0.9.0",
     "optimize-css-assets-webpack-plugin": "^5.0.3",
+    "pattern.css": "^1.0.0",
     "postcss-loader": "^3.0.0",
     "prettier": "^2.0.0",
     "sanitize.css": "^11.0.0",
@@ -62,15 +64,21 @@
     "sass-loader": "^8.0.2",
     "sass-mq": "^5.0.1",
     "style-loader": "^1.1.3",
+    "stylelint": "^13.3.3",
+    "stylelint-config-prettier": "^8.0.1",
+    "stylelint-config-recommended-scss": "^4.2.0",
+    "stylelint-order": "^4.0.0",
+    "stylelint-prettier": "^1.1.2",
+    "stylelint-scss": "^3.17.1",
     "svg-url-loader": "^5.0.0",
-    "tailwindcss": "^1.2.0",
     "terser-webpack-plugin": "^2.3.2",
     "tippy.js": "^6.0.0",
-    "ts-loader": "^6.2.1",
+    "ts-loader": "^7.0.1",
     "ts-node": "^8.6.2",
     "typescript": "^3.6.3",
     "webpack": "^4.41.5",
-    "webpack-cli": "^3.3.10"
+    "webpack-cli": "^3.3.10",
+    "workbox-webpack-plugin": "^5.1.2"
   },
   "engines": {
     "node": ">=10",
