--- a/package.json
+++ b/package.json
@@ -81,8 +81,9 @@
     "workbox-webpack-plugin": "^5.1.2"
   },
   "engines": {
-    "node": ">=10",
-    "yarn": "1.x"
+    "node": "12.16.x",
+    "yarn": "1.x",
+    "npm": "6.14.x"
   },
   "entry": {
     "main": "./src/ts/main.ts"
