--- a/pyproject.toml
+++ b/pyproject.toml
@@ -20,6 +20,7 @@ Pillow = "^7.0.0"
 semver = "^2.9.1"
 tomlkit = "^0.6.0"
 whitenoise = { version = "^5.0.1", extras = ["brotli"] }
+cytoolz = "^0.10.1"
 
 [tool.poetry.dev-dependencies]
 colorama = "^0.4.3"
@@ -31,6 +32,7 @@ pytest-cov = "^2.8.1"
 pytest-html = "^2.0.0"
 pytest-selenium = "^1.17.0"
 toml = "^0.10.0"
+pre-commit = "^2.3.0"
 
 [tool.poetry.scripts]
 
