--- a/package.json
+++ b/package.json
@@ -10,7 +10,8 @@
     "build": "cross-env NODE_ENV=production webpack --config webpack.config.ts",
     "build:dev": "cross-env NODE_ENV=development webpack --config webpack.config.ts --progress",
     "build:prod": "cross-env NODE_ENV=production webpack --config webpack.config.ts --progress",
-    "watch": "yarn run build:dev --watch"
+    "watch": "yarn run build:dev --watch",
+    "test": "ts-node bin/run-tests.ts"
   },
   "prettier": {
     "arrowParens": "always",
