--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,6 +1,6 @@
 [tool.poetry]
 name = "holdmypics"
-version = "0.15.0"
+version = "0.15.1"
 description = ""
 authors = ["Michael Van Wickle <mvanwickle@gmail.com>"]
 
@@ -8,6 +8,7 @@ authors = ["Michael Van Wickle <mvanwickle@gmail.com>"]
 python = "^3.7"
 attrs = "^19.3.0"
 beautifulsoup4 = { version = "^4.3", extras = ["lxml"] }
+cytoolz = "^0.10.1"
 environs = "^7.0"
 flask = "^1.1"
 flask-cors = "^3.0.8"
@@ -20,11 +21,12 @@ Pillow = "^7.0.0"
 semver = "^2.9.1"
 tomlkit = "^0.6.0"
 whitenoise = { version = "^5.0.1", extras = ["brotli"] }
-cytoolz = "^0.10.1"
 
 [tool.poetry.dev-dependencies]
 colorama = "^0.4.3"
 isort = "^4.3"
+memory_profiler = "^0.57.0"
+pre-commit = "^2.3.0"
 psutil = "^5.6.5"
 ptpython = "^3.0.0"
 pytest = "^5.0"
@@ -32,7 +34,6 @@ pytest-cov = "^2.8.1"
 pytest-html = "^2.0.0"
 pytest-selenium = "^1.17.0"
 toml = "^0.10.0"
-pre-commit = "^2.3.0"
 
 [tool.poetry.scripts]
 
