--- a/pytest.ini
+++ b/pytest.ini
@@ -22,3 +22,4 @@ selenium_capture_debug = always
 log_format = %(asctime)s %(levelname)s %(name)s %(message)s
 log_date_format = %Y-%m-%d %H:%M:%S
 console_output_style = count
+trace-mem = True
