Log remote address

--- a/package.json
+++ b/package.json
@@ -56,6 +56,7 @@
     "core-js": "^3.6.4",
     "cross-env": "^7.0.2",
     "css-loader": "^3.4.2",
+    "cssnano": "^4.1.10",
     "cypress": "^4.1.0",
     "debug": "^4.1.1",
     "eslint": "^6.1.0",
@@ -69,6 +70,7 @@
     "mini-css-extract-plugin": "^0.9.0",
     "optimize-css-assets-webpack-plugin": "^5.0.3",
     "pattern.css": "^1.0.0",
+    "postcss-cli": "^7.1.1",
     "postcss-loader": "^3.0.0",
     "prettier": "^2.0.0",
     "sanitize.css": "^11.0.0",
@@ -83,6 +85,7 @@
     "stylelint-prettier": "^1.1.2",
     "stylelint-scss": "^3.17.1",
     "svg-url-loader": "^5.0.0",
+    "tailwindcss": "^1.4.4",
     "tippy.js": "^6.0.0",
     "ts-loader": "^7.0.1",
     "ts-node": "^8.6.2",
