--- a/pyproject.toml
+++ b/pyproject.toml
@@ -21,6 +21,10 @@ Pillow = "^7.0.0"
 semver = "^2.9.1"
 tomlkit = "^0.6.0"
 whitenoise = { version = "^5.0.1", extras = ["brotli"] }
+pytest = { version = "^5.0", optional = true }
+pytest-cov = { version = "^2.8.1", optional = true }
+pytest-html = { version = "^2.0.0", optional = true }
+pytesseract = { version = "^0.3.4", optional = true }
 
 [tool.poetry.dev-dependencies]
 colorama = "^0.4.3"
@@ -29,12 +33,10 @@ memory_profiler = "^0.57.0"
 pre-commit = "^2.3.0"
 psutil = "^5.6.5"
 ptpython = "^3.0.0"
-pytest = "^5.0"
-pytest-cov = "^2.8.1"
-pytest-html = "^2.0.0"
-pytest-selenium = "^1.17.0"
 toml = "^0.10.0"
-pytesseract = "^0.3.4"
+
+[tool.poetry.extras]
+tests = ["pytest", "pytest-cov", "pytest-html", "pytesseract"]
 
 [tool.poetry.scripts]
 
