--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -18,6 +18,7 @@ jobs:
           command: |
             sudo pip install poetry
             poetry install --no-interaction -E tests
+            curl --create-dirs --output node_modules/friendly-words/generated/words.json https://unpkg.com/friendly-words@1.1.10/generated/words.json
       - save_cache:
           key: deps9-{{ .Branch }}-{{ checksum "poetry.lock" }}
           paths:
