--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -7,17 +7,19 @@ jobs:
           POETRY_VIRTUALENVS_IN_PROJECT: "1"
           POETRY_VIRTUALENVS_CREATE: "1"
           TESTS_SKIP_INDEX: "1"
-      - image: circleci/redis:5.0.8-alpine
+      - image: circleci/redis:5.0.9-alpine
     steps:
       - checkout
       - run: sudo chown -R circleci:circleci /usr/local/bin
       - run: sudo chown -R circleci:circleci /usr/local/lib/python3.8/site-packages
       - restore_cache:
           key: deps9-{{ .Branch }}-{{ checksum "poetry.lock" }}
+      - run: sudo apt-get install tesseract-ocr libtesseract-dev
       - run:
           command: |
             sudo pip install poetry
             poetry install --no-interaction -E tests
+            curl --create-dirs --output node_modules/friendly-words/generated/words.json https://unpkg.com/friendly-words@1.1.10/generated/words.json
       - save_cache:
           key: deps9-{{ .Branch }}-{{ checksum "poetry.lock" }}
           paths:
