Front end changes [skip ci]
Styling fixes/css purging.
Typescript restructuring.

--- a/package.json
+++ b/package.json
@@ -10,10 +10,10 @@
     "build": "cross-env NODE_ENV=production webpack --config webpack.config.ts",
     "build:dev": "cross-env NODE_ENV=development webpack --config webpack.config.ts --progress",
     "build:prod": "cross-env NODE_ENV=production webpack --config webpack.config.ts --progress",
-    "watch": "yarn run build:dev --watch",
-    "test": "ts-node bin/run-tests.ts",
     "dev": "cross-env NODE_ENV=development webpack --config webpack.config.ts --progress",
-    "prod": "cross-env NODE_ENV=production webpack --config webpack.config.ts --progress"
+    "prod": "cross-env NODE_ENV=production webpack --config webpack.config.ts --progress",
+    "test": "ts-node bin/run-tests.ts",
+    "watch": "yarn run build:dev --watch"
   },
   "prettier": {
     "arrowParens": "always",
@@ -51,6 +51,8 @@
     "@types/terser-webpack-plugin": "^2.2.0",
     "@types/webpack": "^4.41.2",
     "@types/workbox-webpack-plugin": "^5.1.0",
+    "@typescript-eslint/eslint-plugin": "^2.31.0",
+    "@typescript-eslint/parser": "^2.31.0",
     "autoprefixer": "^9.7.4",
     "babel-loader": "^8.0.6",
     "bourbon": "^7.0.0",
@@ -64,6 +66,9 @@
     "debug": "^4.1.1",
     "eslint": "^6.1.0",
     "eslint-config-prettier": "^6.0.0",
+    "eslint-import-resolver-typescript": "^2.0.0",
+    "eslint-import-resolver-webpack": "^0.12.0",
+    "eslint-plugin-import": "^2.18.2",
     "eslint-plugin-prettier": "^3.1.0",
     "extract-css-chunks-webpack-plugin": "^4.7.4",
     "feather-icons": "^4.24.0",
@@ -88,7 +93,6 @@
     "stylelint-prettier": "^1.1.2",
     "stylelint-scss": "^3.17.1",
     "svg-url-loader": "^5.0.0",
-    "tailwindcss": "^1.4.4",
     "tippy.js": "^6.0.0",
     "ts-loader": "^7.0.1",
     "ts-node": "^8.6.2",
