--- a/.eslintrc.yml
+++ b/.eslintrc.yml
@@ -5,12 +5,91 @@ env:
 extends:
   - "eslint:recommended"
   - plugin:prettier/recommended
+  - plugin:import/recommended
+  - plugin:import/typescript
 plugins:
+  - "@typescript-eslint"
+  - prettier
+  - import
 globals:
   Atomics: readonly
   SharedArrayBuffer: readonly
+parser: "@typescript-eslint/parser"
 parserOptions:
   ecmaVersion: 10
   sourceType: module
 rules:
-  no-unused-vars: warn
+  class-methods-use-this: 0
+  complexity:
+    - warn
+    - max: 24
+  eqeqeq: error
+  lines-between-class-members:
+    - error
+    - always
+    - exceptAfterSingleLine: true
+  no-constructor-return: error
+  no-eval: error
+  no-extra-bind: error
+  no-implied-eval: error
+  no-unneeded-ternary: error
+  no-unused-vars: 0
+  no-shadow:
+    - error
+    - allow: [_, cb, resolve, reject]
+  one-var:
+    - error
+    - never
+  prefer-const: error
+  semi:
+    - error
+    - always
+  sort-imports:
+    - error
+    - ignoreDeclarationSort: true
+      memberSyntaxSortOrder:
+        - none
+        - all
+        - single
+        - multiple
+  template-curly-spacing: error
+  import/dynamic-import-chunkname: 2
+  import/order:
+    - error
+    - alphabetize:
+        order: asc
+      groups:
+        - builtin
+        - external
+        - internal
+        - - sibling
+          - parent
+        - unknown
+        - index
+      newlines-between: always
+  prettier/prettier: error
+settings:
+  import/cache:
+    lifetime: 60
+  import/core-modules:
+    - os
+    - path
+    - process
+    - fs
+  import/extensions: [.js, .ts, .jsx, .tsx]
+  import/external-module-folders: [node_modules]
+  import/ignore:
+    - \.(scss|css)$
+    - autoprefixer
+  import/parsers:
+    "@typescript-eslint/parser":
+      - .ts
+  import/resolver:
+    webpack:
+      config:
+        resolve: { extensions: [.ts] }
+    typescript:
+      alwaysTryTypes: true
+      directory:
+        - src/tsconfig.json
+        - tsconfig.json
