--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -43,5 +43,12 @@
     "editor.codeActionsOnSave": {
       "source.fixAll.stylelint": true
     }
+  },
+  "[typescript]": {
+    "editor.codeActionsOnSave": {
+      "source.fixAll.eslint": true,
+      "source.organizeImports": false
+    },
+    "editor.formatOnSave": true
   }
 }
