--- a/.gitignore
+++ b/.gitignore
@@ -1,7 +1,6 @@
-
 # Created by https://www.gitignore.io/api/node,ruby,macos,python,django,windows,sublimetext
 # Edit at https://www.gitignore.io/?templates=node,ruby,macos,python,django,windows,sublimetext
-
+cypress.env.json
 pytest-report/
 .staticfiles
 .tup/
@@ -28,7 +27,6 @@ webpack-custom-stats.json
 webpack-profile.json
 profile.json
 
-
 pip-wheel-metadata/
 
 *.sqlite
@@ -48,7 +46,9 @@ media
 
 ### Django.Python Stack ###
 # Byte-compiled / optimized / DLL files
-*.py[cod]
+*.pyc
+*.pyo
+*.pyd
 *$py.class
 
 # C extensions
