Move cypress to dedicated folder [skip ci]

--- a/pytest.ini
+++ b/pytest.ini
@@ -7,7 +7,7 @@ addopts =
     --durations 5
     --cov holdmypics
     --cov-report html
-    --html pytest-report/report.html
+    --html .cache/pytest-report/report.html
     --self-contained-html
     -vv
     --ff
