--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -8,7 +8,7 @@ repos:
       - id: check-builtin-literals
       - id: check-merge-conflict
       - id: check-json
-        exclude: "(launch|tasks)\\.json"
+        exclude: "(tsconfig|launch|tasks)\\.json"
       - id: check-yaml
       - id: check-toml
       - id: mixed-line-ending
