--- a/pyproject.toml
+++ b/pyproject.toml
@@ -61,7 +61,7 @@ target-version = ["py38"]
 
 [tool.coverage.run]
 branch = true
-data_file = ".cov/.coverage"
+data_file = ".cache/.cov/.coverage"
 
 [tool.coverage.report]
 precision = 2
@@ -76,7 +76,7 @@ exclude_lines = [
 
 [tool.coverage.html]
 title = "Coverage Report"
-directory = ".cov/htmlcov"
+directory = ".cache/.cov/htmlcov"
 
 [build-system]
 requires = ["poetry>=0.12"]
