--- a/e2e/package.json
+++ b/e2e/package.json
@@ -12,5 +12,10 @@
     "cypress": "^4.5.0",
     "typescript": "^3.9.2",
     "webpack": "^4.43.0"
+  },
+  "scripts": {
+    "cypress:open": "cypress open",
+    "cypress:run": "cypress run",
+    "test": "cypress run"
   }
 }
