--- a/pytest.ini
+++ b/pytest.ini
@@ -17,9 +17,8 @@ filterwarnings =
 cache_dir=${XDG_CACHE_HOME}/pytest/holdmypics
 markers =
     slow
-    run_tasks
-selenium_capture_debug = always
 log_format = %(asctime)s %(levelname)s %(name)s %(message)s
 log_date_format = %Y-%m-%d %H:%M:%S
 console_output_style = count
-trace-mem = True
+trace-mem = False
+empty-dpi = False
