--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "holdmypics",
-  "version": "0.15.5",
+  "version": "0.15.6",
   "description": "Placeholder image generator",
   "repository": "https://github.com/mvwicky/holdmypics.git",
   "license": "MIT",
@@ -55,7 +55,7 @@
     "@types/mini-css-extract-plugin": "^0.9.0",
     "@types/node": "^14.0.13",
     "@types/optimize-css-assets-webpack-plugin": "^5.0.1",
-    "@types/terser-webpack-plugin": "^3.0.0",
+    "@types/terser-webpack-plugin": "^4.0.0",
     "@types/webpack": "^4.41.2",
     "@types/workbox-webpack-plugin": "^5.1.0",
     "@typescript-eslint/eslint-plugin": "^3.2.0",
@@ -67,7 +67,7 @@
     "clipboard": "^2.0.4",
     "core-js": "^3.6.4",
     "cross-env": "^7.0.2",
-    "css-loader": "^3.4.2",
+    "css-loader": "^4.2.0",
     "cssnano": "^4.1.10",
     "debug": "^4.1.1",
     "eslint": "^7.3.1",
@@ -88,7 +88,7 @@
     "prettier": "^2.0.0",
     "sanitize.css": "^11.0.0",
     "sass": "^1.25.0",
-    "sass-loader": "^8.0.2",
+    "sass-loader": "^9.0.2",
     "sass-mq": "^5.0.1",
     "stylelint": "^13.3.3",
     "stylelint-config-prettier": "^8.0.1",
@@ -104,7 +104,7 @@
     "workbox-webpack-plugin": "^5.1.2"
   },
   "engines": {
-    "node": "12.16.x",
+    "node": "14.x.x",
     "npm": "6.14.x",
     "yarn": "1.x"
   },
