--- a/package.json
+++ b/package.json
@@ -104,7 +104,7 @@
     "workbox-webpack-plugin": "^5.1.2"
   },
   "engines": {
-    "node": "14.x.x",
+    "node": ">=12",
     "npm": "6.14.x",
     "yarn": "1.x"
   },
